--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Workshop on Artificial Intelligence for Social Good</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="keywords" content="AI4SG,AI4SG21,AI4SG2021,AI4SG 21,AI4SG 2021,IJCAI,IJCAI21,IJCAI 2021,Artificial,Intelligence,Machine,Learning"/>
+		<meta name="keywords" content="AI4SG,AI4SG23,AI4SG2023,AI4SG 23,AI4SG 2023,AAAI,AAAI23,AAAI 2023,Artificial,Intelligence,Machine,Learning"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -18,10 +18,10 @@
 						<section id="banner">
 							<div class="content">
 								<header>
-									<h1>AI4SG-21</h1>
-									<h2>The 3rd Workshop on Artificial Intelligence for Social Good</h2>
-									<p>at IJCAI 2021</p>
-									<!-- <p>Fully Virtual Workshop - February 8 and 9, 2021</p> -->
+									<h1>AI4SG-23</h1>
+									<h2>The Workshop on Artificial Intelligence for Social Good</h2>
+									<p>at AAAI 2023</p>
+									<!-- <p>February 13, 2023</p> -->
 								</header>
 							</div>
 							<span class="center">
@@ -35,28 +35,75 @@
 								<h2>Scope and Topics</h2>
 							</header>
 							<p>
-							The field of Artificial Intelligence stands at an inflection point, and there could be many different directions in which the future of AI research could unfold. Accordingly, there is a growing interest to ensure that current and future AI research is used in a responsible manner for the benefit of humanity (i.e., for social good). To achieve this goal, a wide range of perspectives and contributions are needed, spanning the full spectrum from fundamental research to sustained deployments in the real-world.
+							The field of Artificial Intelligence stands at an inflection point, and there could be many
+different directions in which the future of AI research could unfold. Accordingly, there is a
+growing interest to ensure that current and future AI research is used in a responsible manner
+for the benefit of humanity (i.e., for social good). To achieve this goal, a wide range of
+perspectives and contributions are needed, spanning the full spectrum from fundamental
+research to sustained deployments in the real-world.
 							</p>
-							This workshop will explore how AI research can contribute to solving challenging problems faced by current-day societies. For example, what role can AI research play in promoting health, sustainable development and infrastructure security? How can AI initiatives be used to achieve consensus among a set of negotiating self-interested entities (e.g., finding resolutions to trade talks between countries)? To address such questions, this workshop will bring together researchers and practitioners across different strands of AI research and a wide range of important real-world application domains. The objective is to share the current state of research and practice, explore directions for future work, and create opportunities for collaboration. In addition, the workshop will place a special emphasis on highlighting AI approaches for tackling the COVID-19 pandemic. The organizers believe that AI research has an important role to play in providing unique insights about the pandemic and developing targeted responses; we encourage submissions from both AI researchers as well as epidemiologists, health policy researchers, and other domain experts who are interested in engaging with the IJCAI community.
+							<p>This workshop will explore how AI research can contribute to solving challenging problems
+faced by current-day societies. For example, what role can AI research play in promoting health,
+sustainable development and infrastructure security? How can AI initiatives be used to achieve
+consensus among a set of negotiating self-interested entities (e.g., finding resolutions to trade
+talks between countries)? To address such questions, this workshop will bring together
+researchers and practitioners across different strands of AI research and a wide range of
+important real-world application domains. The objective is to share the current state of research
+and practice, explore directions for future work, and create opportunities for collaboration. The
+workshop will be a very nice complement to the AAAI Special Track on AI for Social Impact as it
+will provide a forum where researchers interested in this area can connect in a more direct way.</p>
+							
+							<p>This workshop complements the objectives of the main conference by providing a
+forum for AI algorithm designers, such as those working in the areas of agent-based modelling,
+machine learning, spatio-temporal models, deep learning, explainable AI, fairness, social choice,
+non-cooperative and cooperative game theory, convex optimization, and planning under
+uncertainty on innovative and impactful real-world applications. Specifically, this
+workshop serves two purposes. First, the workshop will provide an opportunity to showcase
+real-world deployments of AI research. More often than not, unexpected practical challenges
+emerge when solutions developed in the lab are deployed in the real world, which makes it
+challenging to utilize complex and well thought out computational/modeling advances.
+Learning about the challenges faced in these deployments during the workshop will help us
+understand lessons of moving from the lab to the real world. Second, the workshop will provide
+opportunities to showcase AI systems which dynamically adapt to changing environments, are
+robust to errors in execution and planning, and handle uncertainties of different kinds that are
+common in the real world. Addressing these challenges requires collaboration from different
+communities including machine learning, game theory, operations research, social science, and
+psychology. This workshop is structured to encourage a lively exchange of ideas between
+members from these communities. We encourage submissions to the workshop from: (i)
+computer scientists who have used (or are currently using) their AI research to solve important
+real-world problems for society’s benefit in a measurable manner; (ii) interdisciplinary
+researchers combining AI research with various disciplines (e.g., social science, ecology, climate,
+health, psychology and criminology); and (iii) engineers and scientists from organizations who
+aim for social good, and look to build real multi-agent systems.</p>
 
 							<h3>Topics</h3>
-							The workshop organizers invite paper submissions on the following (and related) topics:
+							Topics of interest include, but
+are not limited to the areas identified in the AAAI Special Track on AI for Social Impact:
 							<ul>
-							<li>Applications of Learning and Optimization in Societally Beneficial Domains</li>
-							<li>AI Approaches for COVID-19</li>
-							<li>Real-world applications of game theory for security</li>
-							<li>Cybersecurity</li>
-							<li>Security applications of machine learning</li>
-							<li>Foundations of game theory for security</li>
-							<li>Adversarial/robust learning</li>
-							<li>Fake news control</li>
-							<li>Privacy protection</li>
-							<li>Agent/human interaction for preference elicitation and optimization</li>
-							<li>Protection against environmental crime</li>
-							<li>Explainable Artificial Intelligence</li>
-							<li>AI Environmental Sustainability</li>
-							<li>AI for Democracy in the Developing World</li>
-							</ul>
+<li>AISI: Agriculture/Food</li>
+<li>AISI: Assistive Technology for Well-Being</li>
+<li>AISI: Biodiversity or Habitat</li>
+<li>AISI: Computational Social Science</li>
+<li>AISI: Climate</li>
+<li>AISI: Education</li>
+<li>AISI: Economic/Financial</li>
+<li>AISI: Energy</li>
+<li>AISI: Environmental Sustainability</li>
+<li>AISI: Health and Well-Being</li>
+<li>AISI: Humanities</li>
+<li>AISI: Low and Middle-Income Countries</li>
+<li>AISI: Mobility/Transportation</li>
+<li>AISI: Natural Sciences</li>
+<li>AISI: Web or Social Networks</li>
+<li>AISI: Philosophical and Ethical Issues</li>
+<li>AISI: Security and Privacy</li>
+<li>AISI: Social Development</li>
+<li>AISI: Social Welfare, Justice, Fairness and Equality</li>
+<li>AISI: Urban Planning and Resilience</li>
+<li>AISI: Underserved Communities</li>
+<li>AISI: Socially Responsible AI: Fairness, Accountability, and Transparency</li>
+<li>AISI: Other Social Impact</li>
+</ul>
 							<p>
 								Finally, the workshop will welcome papers that describe the release of benchmarks and data sets 
 								that can be used by the community to solve fundamental problems of interest, including in 
@@ -66,7 +113,7 @@
 							<h3>Format</h3> 
 							<p> The workshop will be a one-day 
 							meeting.  It will include a number of (possibly parallel) technical  
-							sessions, a virtual poster session where presenters can discuss their work, with
+							sessions, a poster session where presenters can discuss their work, with
 							the aim of  further fostering collaborations, multiple invited
 							speakers covering crucial challenges for the field of
 							AI for Social Good and learning and will
@@ -82,10 +129,9 @@
 								<h2>Important Dates</h2>
 							</header>
 							<ul>
-							<li><strong><strike>May 17, 2021 AOE</strong> – Submission Deadline</strike></li>
-							<li><strong><strike>June 1, 2021</strong> – Acceptance notification</strike></li><!-- <font color="#f56a6a">[New]</font></li> -->
-							<li><strong>August 21, 2021, 10 AM - 4 PM EST </strong> – Workshop Date (First Half) </li>
-							<li><strong>August 21, 2021, 8 PM - 2 AM EST </strong> – Workshop Date (First Half) </li>
+							<li><strong>November 20, 2022 AOE</strong> – Submission Deadline</li>
+							<li><strong>December 5, 2022</strong> – Acceptance notification</li><!-- <font color="#f56a6a">[New]</font></li> -->
+							<li><strong>February 13, 2023, 9 AM - 5 PM EST </strong> – Workshop Date </li>
 							</ul>
 						</section>
 
@@ -101,25 +147,25 @@
 							<h3>Submission Types</h3>
 							<ul>
 								<li><strong>Technical Papers</strong>: 
-								Full-length research papers of up to 6 pages (excluding references and appendices) 
+								Full-length research papers of up to 7 pages (excluding references and appendices) 
 								detailing high quality work in progress or work that could potentially be published at 
-								a major conference in IJCAI format. 
+								a major conference in AAAI format. 
 								</li>
 								<li><strong>Short Papers</strong>: 
-								Position or short papers of up to 4 pages (excluding references and appendices) in IJCAI format that 
+								Position or short papers of up to 4 pages (excluding references and appendices) in AAAI format that 
 								describe initial work or the release of privacy-preserving benchmarks and datasets on the 
 								topics of interest. 
 								</li>
 							</ul>
 
 
-							<!--<h4>Fast Track (Rejected AAMAS or IJCAI papers)</h4>
+							<!--<h4>Fast Track (Rejected AAAI papers from AI for Social Impact Track)</h4>
 							<p>
-							Rejected AAMAS or IJCAI papers may be submitted to AI4SG along with previous reviews and scores and an optional letter indicating how the 
+							Rejected AAAI papers from the AI for Social Impact Track may be submitted to AI4SG along with previous reviews and scores and an optional letter indicating how the 
 							authors have addressed the reviewers comments.
 							<br>
 							Please use the submission link above and indicate that the submission is a resubmission from 
-							of an AAMAS/IJCAI rejected paper. Also OptLearnMAS submission, reviews and optimal letter 
+							of an AAAI rejected paper. Also, the submission pdf, reviews and optional letter 
 							need to be compiled into a single pdf file.
 							<br>
 							These submissions will not undergo the regular review process, but a light one, performed by the 
@@ -128,13 +174,13 @@
 							</p>-->
 
 							<p>	
-							All papers must be submitted in PDF format, using the <a href="https://www.ijcai.org/authors_kit">IJCAI-21 author kit</a>. 
+							All papers must be submitted in PDF format, using the <a href="https://aaai.org/Conferences/AAAI-23/">AAAI-23 author kit</a>. 
 							Submissions should include the name(s), affiliations, and email addresses of all authors. 
 							<br>
 							Submissions will be refereed on the basis of technical quality, novelty, significance, and 
 							clarity. Each submission will be thoroughly reviewed by at least two program committee members.
 							<br>
-							Submissions of papers rejected from the AAMAS 2021 and IJCAI 2021 technical program are welcomed. 
+							Submissions of papers rejected from the AAAI 2023 technical program are welcomed. 
 							<!-- Papers will be selected for oral and/or poster presentation at the workshop.  -->
 							</p>
 
@@ -143,14 +189,14 @@
 							</p>
 						</section>
 
-												<section>
+												<!--<section>
 							<header class="major" id="program">
 								<h2>Program</h2>
 							</header>
 
-							<!--<header class="major" id="program">
+							<header class="major" id="program">
 								<h3>Accepted Papers</h3>
-							</header>-->
+							</header>
 								<ol>
 									<li>10 AM - 11 AM EST: Invited Talk TBA
 									<li>11 AM - 11:20 AM EST: Generative Transfer Learning from Few Shots: Covid-19 Classification with a few Chest X-ray Images. Suvarna Kadam and Vinay Vaidya.</li>
@@ -186,7 +232,7 @@
 									<li>1:30 AM - 1:50 AM EST: Learning to Design Fair and Private Voting Rules. Farhad Mohsin, Ao Liu, Pin-Yu Chen, Francesca Rossi and Lirong Xia.</li>
 									<li>1:50 AM - 2:10 AM EST: Deep Learning Approaches for Teleseismic Discrimination and its Societal Implications. Rayna Arora and Ronan Le Bras.</li>
 								</ol>
-						</section>
+						</section>-->
 
 
 
@@ -215,38 +261,13 @@
 
 								<!-- <article> -->
 								<div class="col-4 col-12-medium">
-									<span class="image left"><a href="https://haipeng-chen.github.io/"><img class="center" src="images/haipeng.jpeg" alt=""/></a></span>
+									<span class="image left"><a href="https://viterbi.usc.edu/directory/faculty/Dilkina/Bistra"><img class="center" src="images/bistra.png" alt=""/></a></span>
 									<div class="content">
-										<p class="name">Haipeng Chen</p>
-										Harvard University
+										<p class="name">Bistra Dilkina</p>
+										University of Southern California
 										<br><br>
 										<p>
-										<a href="mailto:hpchen@seas.harvard.edu">hpchen@seas.harvard.edu</a>
-										</p>
-									</div>
-								</div>
-								<!-- </article> -->
-								<!-- <article> -->
-								<div class="col-4 col-12-medium">
-									<span class="image left"><a href="https://mila.quebec/en/person/sasha-luccioni/"><img class="center" src="images/sasha.jpeg" alt=""/></a></span>
-									<div class="content">
-										<p class="name">Sasha Luccioni</p>
-										Mila, Universite de Montreal
-										<br><br>
-										<p>
-										<a href="mailto:sasha.luccioni@mila.quebec">sasha.luccioni@mila.quebec</a>
-										</p>
-									</div>
-								</div>
-								<!-- </article> -->
-								<div class="col-4 col-12-medium">
-									<span class="image left"><a href="https://ix.cs.uoregon.edu/~thanhhng/"><img class="center" src="images/thanh.jpeg" alt=""/></a></span>
-									<div class="content">
-										<p class="name">Thanh Nguyen</p>
-										University of Oregon
-										<br><br>
-										<p>
-										<a href="mailto:thanhhng@cs.uoregon.edu">thanhhng@cs.uoregon.edu</a>
+										<a href="mailto:dilkina@usc.edu">dilkina@usc.edu</a>
 										</p>
 									</div>
 								</div>
@@ -261,7 +282,7 @@
 					<!-- Menu -->
 						<nav id="menu">
 							<header class="major">
-								<h2>AI4SG21</h2>
+								<h2>AI4SG23</h2>
 							</header>
 							<ul>
 								<li><a href="#scope">Scope</a></li>
