--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 							</header>
 
 							<p>
-							Submission URL:  <a href="https://easychair.org/conferences/?conf=ai4sg2021">Easychair Link</a>
+							Submission URL:  <a href="https://easychair.org/conferences/?conf=aisg23">Easychair Link</a>
 							</p>
 
 							<h3>Submission Types</h3>
@@ -245,7 +245,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 
 							<div class="row">
 								<!-- </article> -->
-								<div class="col-4 col-12-medium">
+								<div class="col-6 col-12-medium">
 									<span class="image left">
 										<a href="http://amulyayadav.com"><img class="center" src="images/amulya.jpeg" alt=""/></a>
 									</span>
@@ -260,7 +260,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 								</div>
 
 								<!-- <article> -->
-								<div class="col-4 col-12-medium">
+								<div class="col-6 col-12-medium">
 									<span class="image left"><a href="https://viterbi.usc.edu/directory/faculty/Dilkina/Bistra"><img class="center" src="images/bistra.png" alt=""/></a></span>
 									<div class="content">
 										<p class="name">Bistra Dilkina</p>
