--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 								<h2>Important Dates</h2>
 							</header>
 							<ul>
-							<li><strong><s>November 20, 2022 AOE</s>November 30, 2022 AOE</strong> – Submission Deadline</li>
+							<li><strong><s>November 20, 2022 AOE</s> November 30, 2022 AOE</strong> – Submission Deadline</li>
 							<li><strong>December 14, 2022</strong> – Acceptance Notifications to Authors</li><!-- <font color="#f56a6a">[New]</font></li> -->
 							<li><strong>January 14, 2023</strong> – Camera Ready Versions Due Date</li>
 							<li><strong>February 14, 2023, 8 AM - 6 PM EST </strong> – Workshop Date & Time </li>
@@ -138,7 +138,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 						
 						
 						<section>
-							<header class="major" id="chairs">
+							<header class="major" id="invited">
 								<h2>Keynote Speakers</h2>
 							</header>
 
