--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 								<!-- </article> -->
 								<div class="col-6 col-12-medium">
 									<span class="image left">
-										<a href="https://research.google/people/PhilipNelson/"><img class="center" src="images/nelson.jpeg" alt=""/></a>
+										<a href="https://research.google/people/PhilipNelson/"><img class="center" width="100" height="100" src="images/nelson.jpeg" alt=""/></a>
 									</span>
 									<div class="content">
-										<p class="name">Philip Nelson</p>
+										<p class="name"><b>Philip Nelson</b></p>
 										Director of Engineering
 										<br>
 										Google Research
@@ -158,9 +158,9 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 
 								<!-- <article> -->
 								<div class="col-6 col-12-medium">
-									<span class="image left"><a href="https://www-users.cse.umn.edu/~kumar001/"><img class="center" src="images/vipin.png" alt=""/></a></span>
+									<span class="image left"><a href="https://www-users.cse.umn.edu/~kumar001/"><img class="center" width="100" height="100" src="images/vipin.png" alt=""/></a></span>
 									<div class="content">
-										<p class="name">Vipin Kumar</p>
+										<p class="name"><b>Vipin Kumar</b></p>
 										Regents Professor & William Norris Endowed Chair
 										<br>
 										University of Minnesota
@@ -172,10 +172,10 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 								<!-- </article> -->
 								<div class="col-6 col-12-medium">
 									<span class="image left">
-										<a href="https://www.microsoft.com/en-us/research/people/radodhia/"><img class="center" src="images/rahul.jpeg" alt=""/></a>
+										<a href="https://www.microsoft.com/en-us/research/people/radodhia/"><img class="center" width="100" height="100" src="images/rahul.jpeg" alt=""/></a>
 									</span>
 									<div class="content">
-										<p class="name">Rahul Dodhia</p>
+										<p class="name"><b>Rahul Dodhia</b></p>
 										Deputy Director
 										<br>
 										Microsoft AI for Good Research Lab
@@ -184,9 +184,9 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 
 								<!-- <article> -->
 								<div class="col-6 col-12-medium">
-									<span class="image left"><a href="https://www.linkedin.com/in/amarjot-singh-phd-b5269815/"><img class="center" src="images/amarjot.jpeg" alt=""/></a></span>
+									<span class="image left"><a href="https://www.linkedin.com/in/amarjot-singh-phd-b5269815/"><img class="center" width="100" height="100" src="images/amarjot.jpeg" alt=""/></a></span>
 									<div class="content">
-										<p class="name">Amarjot Singh</p>
+										<p class="name"><b>Amarjot Singh</b></p>
 										Founder & CEO
 										<br>
 										Skylark Labs
@@ -361,10 +361,9 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 									<span class="opener">Program</span>
 								<ul>
 									<li><a href="#program">Accepted Papers</a></li>
-									<li><a href="#program">Invited Talks</a></li>
 								</ul>
 								</li>
-								<li><a href="#invited">Invited Speakers</a></li>
+								<li><a href="#invited">Keynote Speakers</a></li>
  
  								<li><a href="#pc">Program Committee</a></li>
 								<li><a href="#chairs">Workshop Chairs</a></li>
