--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 								<!-- </article> -->
 								<div class="col-6 col-12-medium">
 									<span class="image left">
-										<a href="https://research.google/people/PhilipNelson/"><img class="center" width="100" height="100" src="images/nelson.jpeg" alt=""/></a>
+										<a href="https://research.google/people/PhilipNelson/"><img class="center" src="images/nelson.jpeg" alt=""/></a>
 									</span>
 									<div class="content">
 										<p class="name"><b>Philip Nelson</b></p>
@@ -158,7 +158,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 
 								<!-- <article> -->
 								<div class="col-6 col-12-medium">
-									<span class="image left"><a href="https://www-users.cse.umn.edu/~kumar001/"><img class="center" width="100" height="100" src="images/vipin.png" alt=""/></a></span>
+									<span class="image left"><a href="https://www-users.cse.umn.edu/~kumar001/"><img class="center" src="images/vipin2.jpeg" alt=""/></a></span>
 									<div class="content">
 										<p class="name"><b>Vipin Kumar</b></p>
 										Regents Professor & William Norris Endowed Chair
@@ -172,7 +172,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 								<!-- </article> -->
 								<div class="col-6 col-12-medium">
 									<span class="image left">
-										<a href="https://www.microsoft.com/en-us/research/people/radodhia/"><img class="center" width="100" height="100" src="images/rahul.jpeg" alt=""/></a>
+										<a href="https://www.microsoft.com/en-us/research/people/radodhia/"><img class="center" src="images/rahul.jpeg" alt=""/></a>
 									</span>
 									<div class="content">
 										<p class="name"><b>Rahul Dodhia</b></p>
@@ -184,7 +184,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 
 								<!-- <article> -->
 								<div class="col-6 col-12-medium">
-									<span class="image left"><a href="https://www.linkedin.com/in/amarjot-singh-phd-b5269815/"><img class="center" width="100" height="100" src="images/amarjot.jpeg" alt=""/></a></span>
+									<span class="image left"><a href="https://www.linkedin.com/in/amarjot-singh-phd-b5269815/"><img class="center" src="images/amarjot.jpeg" alt=""/></a></span>
 									<div class="content">
 										<p class="name"><b>Amarjot Singh</b></p>
 										Founder & CEO
