--- a/index.html
+++ b/index.html
@@ -346,20 +346,20 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 							</header>
 
 							<ul>
-<li>Milan Jain, Narmadha Meenu Mohankumar, Heng Wan, Sumitrra Ganguly, Kyle D Wilson and David M Anderson. <i>Training Machine Learning Models to Characterize Temporal Evolution of Disadvantaged Communities.</i> <a href="images/29.pdf"></li>
-<li>April Chen and Prajna Soni. <i>FARE: Fair Allocation RE-weighting.</i> <a href="images/30.pdf"></li>
-<li>Nalin Semwal, Manan Suri, Divya Chaudhary, Ian Gorton and Bijendra Kumar. <i>Multimodal Analysis and Modality Fusion for Detection of Depression from Twitter Data. </i><a href="images/31.pdf"></li>
-<li>Aman Priyanshu, Supriti Vijay and Ashalatha Nayak. <i>F-BRIM: A Semi-Supervised Approach for Bias Mitigation with Activation-Weighted Neuron Regularization. </i><a href="images/32.pdf"></li>
-<li>Lucia Gordon and Samuel Collier. <i>Detecting Rhino Middens with Computer Vision and Active Learning: Preliminary Results.</i> <a href="images/33.pdf"></li>
-<li>Zhiyao Luo, Peter Watkinson and Tingting Zhu. <i>NurSpecialist: Duel-Agent Reinforcement Learning for Dynamic Hospitalised Intervention Regimes using Electronic Health Records. </i><a href="images/34.pdf"></li>
-<li>Anuradha Singh, Jyoti Yadav, Sarahana Shrestha and Aparna Varde. <i>Linking Alternative Fuel Vehicles Adoption with Socioeconomic Status and Air Quality Index. </i><a href="images/35.pdf"></li>
-<li>Hari Prasanna Das and Costas J. Spanos. <i>Improved Dequantization and Normalization Methods for Tabular Data Pre-Processing in Smart Buildings. </i><a href="images/36.pdf"></li>
-<li>Bo Lin, Timothy Chan and Shoshanna Saxe. <i>AutoLTS: A Computer Vision Approach to Assessing Cycling Stress. </i><a href="images/37.pdf"></li>
-<li>Toan Tran and Mina Sartipi. <i>Revisiting Pixel-based Traffic Signal Controls using Reinforcement Learning with World Models. </i><a href="images/38.pdf"></li>
-<li>Hongjin Lin, Matthew Nazari and Derek Zheng. <i>PCTreeS — 3D Point Cloud Tree Species Classification Using Airborne LiDAR Images. </i><a href="images/39.pdf"></li>
-<li>Jackson Killian, Arshika Lalan, Aditya Mate, Manish Jain, Aparna Taneja and Milind Tambe. <i>Adherence Bandits. </i><a href="images/40.pdf"></li>
-<li>Saeid Shamsaliei, Odd Erik Gundersen, Knut Alfredsen and Jo Halvard Halleraker. <i>Towards Historical Analysis of Riverscape Development Utilizing Semantic Segmentation. </i><a href="images/41.pdf"></li>
-<li>Amy Jin and Maximillian Guo. <i>Using Satellite Imagery to Predict Multidimensional Poverty in Nigeria. </i><a href="images/42.pdf"></li>
+<li>Milan Jain, Narmadha Meenu Mohankumar, Heng Wan, Sumitrra Ganguly, Kyle D Wilson and David M Anderson. <i>Training Machine Learning Models to Characterize Temporal Evolution of Disadvantaged Communities.</i> <a href="images/29.pdf">PDF</a></li>
+<li>April Chen and Prajna Soni. <i>FARE: Fair Allocation RE-weighting.</i> <a href="images/30.pdf">PDF</a></li>
+<li>Nalin Semwal, Manan Suri, Divya Chaudhary, Ian Gorton and Bijendra Kumar. <i>Multimodal Analysis and Modality Fusion for Detection of Depression from Twitter Data. </i><a href="images/31.pdf">PDF</a></li>
+<li>Aman Priyanshu, Supriti Vijay and Ashalatha Nayak. <i>F-BRIM: A Semi-Supervised Approach for Bias Mitigation with Activation-Weighted Neuron Regularization. </i><a href="images/32.pdf">PDF</a></li>
+<li>Lucia Gordon and Samuel Collier. <i>Detecting Rhino Middens with Computer Vision and Active Learning: Preliminary Results.</i> <a href="images/33.pdf">PDF</a></li>
+<li>Zhiyao Luo, Peter Watkinson and Tingting Zhu. <i>NurSpecialist: Duel-Agent Reinforcement Learning for Dynamic Hospitalised Intervention Regimes using Electronic Health Records. </i><a href="images/34.pdf">PDF</a></li>
+<li>Anuradha Singh, Jyoti Yadav, Sarahana Shrestha and Aparna Varde. <i>Linking Alternative Fuel Vehicles Adoption with Socioeconomic Status and Air Quality Index. </i><a href="images/35.pdf">PDF</a></li>
+<li>Hari Prasanna Das and Costas J. Spanos. <i>Improved Dequantization and Normalization Methods for Tabular Data Pre-Processing in Smart Buildings. </i><a href="images/36.pdf">PDF</a></li>
+<li>Bo Lin, Timothy Chan and Shoshanna Saxe. <i>AutoLTS: A Computer Vision Approach to Assessing Cycling Stress. </i><a href="images/37.pdf">PDF</a></li>
+<li>Toan Tran and Mina Sartipi. <i>Revisiting Pixel-based Traffic Signal Controls using Reinforcement Learning with World Models. </i><a href="images/38.pdf">PDF</a></li>
+<li>Hongjin Lin, Matthew Nazari and Derek Zheng. <i>PCTreeS — 3D Point Cloud Tree Species Classification Using Airborne LiDAR Images. </i><a href="images/39.pdf">PDF</a></li>
+<li>Jackson Killian, Arshika Lalan, Aditya Mate, Manish Jain, Aparna Taneja and Milind Tambe. <i>Adherence Bandits. </i><a href="images/40.pdf">PDF</a></li>
+<li>Saeid Shamsaliei, Odd Erik Gundersen, Knut Alfredsen and Jo Halvard Halleraker. <i>Towards Historical Analysis of Riverscape Development Utilizing Semantic Segmentation. </i><a href="images/41.pdf">PDF</a></li>
+<li>Amy Jin and Maximillian Guo. <i>Using Satellite Imagery to Predict Multidimensional Poverty in Nigeria. </i><a href="images/42.pdf">PDF</a></li>
 </ul>
 
 						</section>
