--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 <li>Akash Saravanan, Dhruv Mullick, Habib Rahman and Nidhi Hegde. <i>FineDeb: A Debiasing Framework for Language Models.</i> <a href="images/24.pdf">PDF</a></li>
 <li>Marc Grimson, Qinru Shi, Yiwei Bai, Alexander Flecker and Carla Gomes. <i>Scaling Up the Pareto Frontier for Tree Structures with Affine Transformations.</i> <a href="images/25.pdf">PDF</a></li>
 <li>Joshua Chang, Carson Chow and Julia Porcino. <i>Autoencoded sparse Bayesian in-IRT factorization, calibration, and amortized inference for the Work Disability Functional Assessment Battery.</i> <a href="images/26.pdf">PDF</a></li>
-<li>Manjish Pal, Subham Pokhriyal and Niloy Ganguly. <i>Ensuring Demographic Parity and Equalized Odds in Batch Classification.</i> <a href="images/27.pdf">PDF</a></li>
+<li>Manjish Pal, Subham Pokhriyal and Niloy Ganguly. <i>Ensuring Demographic Parity and Equalized Odds in Batch Classification.</i> <a href="">PDF (removed at author request)</a></li>
 <li>Isha Puri, Neil Sehgal and Usha Bhalla. <i>Reconsidering the Algorithmic Fairness of Race Adjustment in Pulmonary Function Equations.</i><a href="images/28.pdf">PDF</a></li>
 </ul>
 
@@ -347,7 +347,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 
 							<ul>
 <li>Milan Jain, Narmadha Meenu Mohankumar, Heng Wan, Sumitrra Ganguly, Kyle D Wilson and David M Anderson. <i>Training Machine Learning Models to Characterize Temporal Evolution of Disadvantaged Communities.</i> <a href="images/29.pdf">PDF</a></li>
-<li>April Chen and Prajna Soni. <i>FARE: Fair Allocation RE-weighting.</i> <a href="images/30.pdf">PDF</a></li>
+<li>April Chen and Prajna Soni. <i>FARE: Fair Allocation RE-weighting.</i> <a href="">PDF (removed at author request)</a></li>
 <li>Nalin Semwal, Manan Suri, Divya Chaudhary, Ian Gorton and Bijendra Kumar. <i>Multimodal Analysis and Modality Fusion for Detection of Depression from Twitter Data. </i><a href="images/31.pdf">PDF</a></li>
 <li>Aman Priyanshu, Supriti Vijay and Ashalatha Nayak. <i>F-BRIM: A Semi-Supervised Approach for Bias Mitigation with Activation-Weighted Neuron Regularization. </i><a href="images/32.pdf">PDF</a></li>
 <li>Lucia Gordon and Samuel Collier. <i>Detecting Rhino Middens with Computer Vision and Active Learning: Preliminary Results.</i> <a href="images/33.pdf">PDF</a></li>
