--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ are not limited to the areas identified in the AAAI Special Track on AI for Soci
 <li>Milan Jain, Narmadha Meenu Mohankumar, Heng Wan, Sumitrra Ganguly, Kyle D Wilson and David M Anderson. <i>Training Machine Learning Models to Characterize Temporal Evolution of Disadvantaged Communities.</i> <a href="images/29.pdf">PDF</a></li>
 <li>April Chen and Prajna Soni. <i>FARE: Fair Allocation RE-weighting.</i> <a href="">PDF (removed at author request)</a></li>
 <li>Nalin Semwal, Manan Suri, Divya Chaudhary, Ian Gorton and Bijendra Kumar. <i>Multimodal Analysis and Modality Fusion for Detection of Depression from Twitter Data. </i><a href="images/31.pdf">PDF</a></li>
-<li>Aman Priyanshu, Supriti Vijay and Ashalatha Nayak. <i>F-BRIM: A Semi-Supervised Approach for Bias Mitigation with Activation-Weighted Neuron Regularization. </i><a href="images/32.pdf">PDF</a></li>
+<li>Supriti Vijay, Aman Priyanshu and Ashalatha Nayak. <i>F-BRIM: A Semi-Supervised Approach for Bias Mitigation with Activation-Weighted Neuron Regularization. </i><a href="">PDF (removed at author request)</a></li>
 <li>Lucia Gordon and Samuel Collier. <i>Detecting Rhino Middens with Computer Vision and Active Learning: Preliminary Results.</i> <a href="images/33.pdf">PDF</a></li>
 <li>Zhiyao Luo, Peter Watkinson and Tingting Zhu. <i>NurSpecialist: Duel-Agent Reinforcement Learning for Dynamic Hospitalised Intervention Regimes using Electronic Health Records. </i><a href="images/34.pdf">PDF</a></li>
 <li>Anuradha Singh, Jyoti Yadav, Sarahana Shrestha and Aparna Varde. <i>Linking Alternative Fuel Vehicles Adoption with Socioeconomic Status and Air Quality Index. </i><a href="images/35.pdf">PDF</a></li>
